fixed dark mode

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,8 +7,8 @@
     --accentd-200: #00999b;
     --textd-100: #FFFFFF;
     --textd-200: #e0e0e0;
-    --bgd-100: #0F0F0F;
-    --bgd-200: #1f1f1f;
+    --bgd-100: #000000;
+    --bgd-200: #080f1d;
     --bgd-300: #353535;
     /* fin ejemplos */
 
@@ -26,6 +26,7 @@
     /* fin ejemplos */
 
     /* temas de background-color */
+    --nav: #7f2ea7;
     --prueba: #f9d700;
     --color: #000;
     --background: #fff;
@@ -62,18 +63,18 @@
     list-style: none;
 
     .scroll::-webkit-scrollbar {
-        width: 1.5rem;    
+        width: 1.5rem;
     }
-    
-    
+
+
     .scroll::-webkit-scrollbar-track {
-        background:var(--primary-100);
+        background: var(--primary-100);
     }
-    
+
     .scroll::-webkit-scrollbar-thumb {
-        background-color:var(--bgd-100);
+        background-color: var(--bgd-100);
         border-radius: 1rem;
-    
+
     }
 }
 
@@ -90,9 +91,9 @@ body {
         font-size: 1.3rem;
         cursor: pointer;
     }
-    
-        
-    
+
+
+
 
 
 
@@ -119,7 +120,73 @@ body {
 body.darkmode {
     background-color: var(--bgd-100);
     color: var(--textd-100);
+
+    .muestraropa {
+        background-color: var(--accentd-100);
+    }
+
+    .btn__filtros {
+        background-color: var(--bgd-100);
+        color: var(--bg-100);
+    }
+
+    .img__prod {
+        background-color: var(--bgd-200);
+    }
+
+    .precioprod {
+        background-color: var(--textd-100);
+    }
+
+    .precio {
+        background-color: var(--primary-100);
+    }
+
+    .footer__ul__social {
+        background-color: var(--text-200);
+    }
+
+    .parrafo__a {
+        color: var(--bgd-100);
+    }
+
+    .navbar__section {
+        background-color: var(--bgd-100);
+    }
+    .hidden {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: 60px;
+        transition: background-color 1s;
+    }
+    
+.hidden.transparent {
+    background-color: transparent;
 }
+
+.navbar.scrolled {
+    background-color: var(--bg-100);
+}
+.cart__products{
+    background-color: var(--bgd-100);
+}
+.cart__total {
+    background-color: var(--bg-100);
+    color: var(--bgd-100);
+}
+.menu__show{
+    background-color: var(--academlo);    
+}
+.menu__show > li .inicio{
+    color: var(--bg-100);
+}
+.bx-menu::before{
+    color: var(--bg-100);
+}
+
+}
+/* fin darkmode */
 
 .fa,
 .fas {
@@ -247,29 +314,38 @@ body.darkmode {
     font-weight: bold;
 }
 
-.header__Section {
-    /* display: flex; */
-    /* height: 70px;
-    width: 100%;
-    position: fixed;
-    z-index: var(--z-header-nav); */
-    position: sticky;
-    top: 0;
-    box-shadow: var(--shadow-nav);
-}
+/* .header__Section {
+    position: sticky; 
+
+} */
 
 .navbar__section {
-    /* display: flex; */
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* align-items: center; */
     width: 100%;
     height: 100%;
-    /* background-color: #000; */
-    background-color: transparent;
+    background-color: var(--bg-100);
     height: calc(var(--h-header) - 50px);
 }
 
+/* navbar */
+.hidden {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 60px;    
+    transition: background-color 1s;
+}
+
+.hidden.transparent {
+    background-color: transparent;
+}
+
+.navbar.scrolled {
+    background-color: var(--bg-100);
+}
+
+/* fin navbar */
 .container {
     display: flex;
     height: 315px;
@@ -301,7 +377,7 @@ body.darkmode {
     padding: .8rem;
     display: flex;
     justify-content: flex-start;
-    background-color: transparent;
+    /* background-color: transparent; */
 }
 
 .svg__mostrar {
@@ -332,8 +408,8 @@ body.darkmode {
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color: transparent;
-    padding: .5rem;
+    /* background-color: transparent; */
+    padding: 1.5rem;
 }
 
 .iconos__nav {
@@ -482,6 +558,15 @@ body.darkmode {
     box-shadow: var(--shadow-nav);
 }
 
+.img__prod img {
+    display: block;
+    transition: transform 0.5s;
+}
+
+.img__prod:hover img {
+    transform: translateY(-20px);
+}
+
 .precio {
     font-family: var(--subtitulo);
     font-weight: bold;
@@ -532,55 +617,51 @@ body.darkmode {
     padding: 1.5rem;
 }
 
-/* .content__modal{
-    background-color: rgba(0, 0, 0, 0.2);
+/* diseño del modal */
+.inicio__modal {
+    background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     top: 0;
     width: 100%;
     min-height: 100vh;
-    padding:0 1rem;
-
     display: grid;
     place-items: center;
     text-align: center;
     opacity: 0;
-    visibility: hidden;    
-    transition: opacity .5s visibility .5s;
-} */
-.content__modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5);
-    cursor: pointer;
+    visibility: hidden;
+    transition: opacity .5s, visibility .5s;
 }
 
-/* .content__modal__show{
+.inicio__modal__show {
     opacity: 1;
     visibility: visible;
-} */
-/* .modal__info{
-    background-color: var(--full-white);
-    border-radius: 2rem;
-    padding: 1rem;
-    position: relative;
-    width: 300px;
-    height: 500px;
-    max-width: 400px;
-    max-height: 100%;
-} */
-.modal__info {
-    background-color: var(--bg-100);
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid var(--text-200);
-    width: 80%;
 }
+
+.content__modal {
+    background-color: var(--bg-100);
+    padding: 1rem;
+    border-radius: 2rem;
+    position: relative;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.bx-comment-x {
+    font-weight: bold;
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    cursor: pointer;
+
+}
+
+/* fin diseño modal */
+
+
+
+
+
+
 
 .bx-comment-x {
     color: var(--text-200);
@@ -617,6 +698,8 @@ body.darkmode {
     justify-content: space-evenly;
     list-style: none;
     padding: 1rem;
+    background-color: var(--primary-300);
+    border-radius: 2rem;
 }
 
 .footer__a {
@@ -794,7 +877,7 @@ body.darkmode {
         font-size: 20px;
     }
 
-    .header__Section {
+    /* .header__Section {
         position: sticky;
         top: 0;
         box-shadow: var(--shadow-nav);
@@ -805,7 +888,7 @@ body.darkmode {
         height: calc(var(--h-header) - 50px);
         box-shadow: var(--shadow-general);
         background-color: transparent;
-    }
+    } */
 
     .primeraMitad {
         width: 100%;
@@ -813,7 +896,7 @@ body.darkmode {
         padding: 0.5rem;
         display: flex;
         justify-content: flex-start;
-        background-color: transparent;
+        /* background-color: transparent; */
     }
 
     .segundaMitad {
@@ -822,7 +905,7 @@ body.darkmode {
         align-items: center;
         width: 100%;
         height: 70px;
-        background-color: transparent;
+        /* background-color: transparent; */
         padding: 0.5rem;
     }
 
